@@ -38,6 +38,10 @@ Release 0.21.1 - Unreleased
 
 Release 0.21.0 - 2010-08-13
 
+    HDFS-1612. Update HDFS design documentation for append, quota, symlink,
+    block placement and checkpoint/backup node features.  (Joe Crobak
+    via szetszwo)
+
   INCOMPATIBLE CHANGES
 
     HDFS-538. Per the contract elucidated in HADOOP-6201, throw
